update admin login logic

--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -126,7 +126,7 @@
                             <div class="col text-start">
                                 <div class="row text-start">
                                     <div class="col-6 ms-3">
-                                        <img src="Assets/building3.png" class="img-fluid">
+                                        <img src="/image/building3.png" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="row text-center my-4">
@@ -137,7 +137,7 @@
                                 </div>
                                 <div class="row justify-content-end">
                                     <div class="col-6 align-self-end me-5">
-                                        <img src="Assets/building4.png" class="img-fluid">
+                                        <img src="/image/building4.png" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
             <div class="card shadow text-center bg-body-tertiary rounded border border-0 mt-1 box4">
                 <div class="row align-items-center mt-2 mb-1">
                     <div class="col-5">
-                        <img src="Assets/AI-PATH.PNG" class="img-fluid" style="width: 66%;">
+                        <img src="/image/AI-PATH.PNG" class="img-fluid" style="width: 66%;">
                     </div>
                     <div class="col-7 text-start">
                         <h1>나만의 경로별</h1>
@@ -161,7 +161,7 @@
             <div class="card shadow text-center my-1 bg-body-tertiary rounded border border-0 mt-4 box5">
                 <div class="row align-items-center">
                     <div class="col mt-3 text-center">
-                        <img src="Assets/AI-remove.png" class="img-fluid p-3">
+                        <img src="/image/AI-remove.png" class="img-fluid p-3">
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -179,10 +179,10 @@
                         <h1 class="text-start">진화된</h1>
                         <h1 class="text-end">AR 서비스</h1>
                         <br><br><br><br><br>
-                        <img src="Assets/AR2.PNG" class="img-fluid">
+                        <img src="/image/AR2.PNG" class="img-fluid">
                     </div>
                     <div class="col-6">
-                        <img src="Assets/AR1.PNG" class="img-fluid ms-4">
+                        <img src="/image/AR1.PNG" class="img-fluid ms-4">
                         <br>
                         <br>
                         <br>
