--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -17,19 +17,18 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <form action="/admin/login" method="post">
+                    <form action="#" th:object="${userdto}" th:action="@{/login}" method="post">
                         <div class="col">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{userdto.username}">
                                 <label for="floatingInput">아이디</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{userdto.password}">
                                 <label for="floatingPassword">비밀번호</label>
                             </div>
                         </div>
                     </form>
-
                 </div>
                 <div class="row mt-4 mt-3">
                     <div class="col text-start fs-6">
@@ -42,7 +41,7 @@
                 <hr>
                 <div class="row" style="opacity: 40%;">
                     <div class="col-2 mt-3">
-                        <img src="Assets/gachon_symbolmark.png" class="img-fluid">
+                        <img src="/image/gachon_symbolmark.png" class="img-fluid">
                     </div>
                     <div class="col-8 p-0 ms-5">
                         <table class="table table-borderless ms-5 ps-3">
