--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -17,44 +17,43 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <form action="/admin/signUp" method="post">
+                    <form th:object="${admindto}" th:action="@{/signup}" method="post">
                         <div class="col">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingAdminId" name="adminId" placeholder="id@example.com">
-                                <label for="floatingAdminId">아이디</label>
+                                <input type="text" class="form-control" id="floatingInput1" placeholder="name@example.com" th:field="*{adminId}">
+                                <label for="floatingInput1">아이디</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingAdminName" name="adminName" placeholder="AdminName">
-                                <label for="floatingAdminName">이름</label>
+                                <input type="text" class="form-control" id="floatingInput2" placeholder="name@example.com" th:field="*{adminPassword}">
+                                <label for="floatingInput2">이름</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="date" class="form-control" id="floatingAdminBirthday" name="adminBirthday" placeholder="AdminBirthday">
-                                <label for="floatingAdminBirthday">생년월일</label>
+                                <input type="date" class="form-control" id="floatingInput3" placeholder="name@example.com" th:field="*{adminBirthday}">
+                                <label for="floatingInput3">생년월일</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="password" class="form-control" id="floatingPassword" name="adminPassword" placeholder="AdminPassword">
-                                <label for="floatingPassword">비밀번호</label>
+                                <input type="password" class="form-control" id="floatingPassword4" placeholder="Password" th:field="*{adminPassword}">
+                                <label for="floatingPassword4">비밀번호</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPasswordCheck" placeholder="AdminPasswordCheck">
-                                <label for="floatingPasswordCheck">비밀번호확인</label>
+                                <input type="password" class="form-control" id="floatingPassword5" placeholder="Password" th:field="*{adminPassword}">
+                                <label for="floatingPassword5">비밀번호확인</label>
                             </div>
                         </div>
                     </form>
-
                 </div>
                 <div class="row mt-4 mt-3">
                     <div class="col text-start fs-6">
                         <a class="btn btn-outline-secondary">메인 페이지</a>
                     </div>
                     <div class="col text-end">
-                        <button type="submit" class="btn btn-outline-primary">회원가입</button>
+                        <a class="btn btn-outline-primary">회원가입</a>
                     </div>
                 </div>
                 <hr>
                 <div class="row" style="opacity: 40%;">
                     <div class="col-2 mt-3">
-                        <img src="Assets/gachon_symbolmark.png" class="img-fluid">
+                        <img src="/image/gachon_symbolmark.png" class="img-fluid">
                     </div>
                     <div class="col-8 p-0 ms-5">
                         <table class="table table-borderless ms-5 ps-3">
