--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -13,18 +13,18 @@
             <div class="card text-center p-5 border border-0 shadow-lg bg-body-tertiary rounded">
                 <div class="row">
                     <div class="col text-center">
-                        <img src="Assets/Gach가자_홈페이지용.png" class="img-fluid">
+                        <img src="/image/Gach가자_홈페이지용.png" class="img-fluid">
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <form action="#" th:object="${userdto}" th:action="@{/login}" method="post">
+                    <form id="login-form" action="#" th:object="${adminDto}" th:action="@{/admin/login}" method="post">
                         <div class="col">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{userdto.username}">
+                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{adminId}">
                                 <label for="floatingInput">아이디</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{userdto.password}">
+                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{adminPassword}">
                                 <label for="floatingPassword">비밀번호</label>
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                         <button type="button" class="btn btn-outline-secondary">메인 페이지</button>
                     </div>
                     <div class="col text-end">
-                        <button type="button" class="btn btn-outline-primary">로그인</button>
+                        <button type="submit" form="login-form" class="btn btn-outline-primary">로그인</button>
                     </div>
                 </div>
                 <hr>
