--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -17,17 +17,18 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <form th:object="${admindto}" th:action="@{/signup}" method="post">
+                    <form id="signup-form" th:object="${adminDto}" th:action="@{/admin/signup}" method="post">
                         <div class="col">
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" id="floatingInput1" placeholder="name@example.com" th:field="*{adminId}">
                                 <label for="floatingInput1">아이디</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput2" placeholder="name@example.com" th:field="*{adminPassword}">
+                                <input type="text" class="form-control" id="floatingInput2" placeholder="name@example.com" th:field="*{adminName}">
                                 <label for="floatingInput2">이름</label>
                             </div>
                             <div class="form-floating mb-3">
+
                                 <input type="date" class="form-control" id="floatingInput3" placeholder="name@example.com" th:field="*{adminBirthday}">
                                 <label for="floatingInput3">생년월일</label>
                             </div>
@@ -36,7 +37,7 @@
                                 <label for="floatingPassword4">비밀번호</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="floatingPassword5" placeholder="Password" th:field="*{adminPassword}">
+                                <input type="password" class="form-control" id="floatingPassword5" placeholder="Password" th:field="*{adminPasswordCheck}">
                                 <label for="floatingPassword5">비밀번호확인</label>
                             </div>
                         </div>
@@ -44,10 +45,10 @@
                 </div>
                 <div class="row mt-4 mt-3">
                     <div class="col text-start fs-6">
-                        <a class="btn btn-outline-secondary">메인 페이지</a>
+                        <a href="/admin/main-page" class="btn btn-outline-secondary">메인 페이지</a>
                     </div>
                     <div class="col text-end">
-                        <a class="btn btn-outline-primary">회원가입</a>
+                        <button type="submit" form="signup-form" class="btn btn-outline-primary">회원가입</button>
                     </div>
                 </div>
                 <hr>
