--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -77,7 +77,7 @@
                     <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box1">
                         <div class="row my-2">
                             <div class="col">
-                                <img src="/image/메인 대시보드(회원).png" class="img-fluid" style="width : 40%;">
+                                <img src="/image/main_dashboard(user).png" class="img-fluid" style="width : 40%;">
                             </div>
                             <div class="col text-start">
                                 <div class="row text-start">
