--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -63,11 +63,11 @@
 <div class="container-fluid">
     <div class="row white">
         <div class="col-4 text-start">
-            <img src="/image/Gach가자_홈페이지 메인용.png" class="img-fluid" style="width:45%;">
+            <img src="/image/Gach_homepage_main.png" class="img-fluid" style="width:45%;">
         </div>
         <div class="col-4 offset-4 text-end mt-4">
             <img src="/image/Download_on_the_App_Store_Badge_KR_RGB_blk_100317.png" class="img-fluid me-5" style="width:25%;">
-            <button type="button" class="btn btn-primary btn-lg me-5">로그인</button>
+            <a type="button" href="/admin/login" class="btn btn-primary btn-lg me-5">로그인</a>
         </div>
     </div>
     <div class="row m-3">
