--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -19,37 +19,54 @@
                 <div class="row mt-5">
                     <form id="signup-form" th:object="${adminDto}" th:action="@{/admin/signup}" method="post">
                         <div class="col">
-                            <div class="form-floating mb-3">
+                            <div class="form-floating mb-2">
                                 <input type="text" class="form-control" id="floatingInput1" placeholder="name@example.com" th:field="*{adminId}">
                                 <label for="floatingInput1">아이디</label>
                             </div>
-                            <div class="form-floating mb-3">
+                            <div th:if="${#fields.hasErrors('adminId')}" th:errors="*{adminId}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                아이디 오류
+                            </div>
+                            <div th:if="idMessage" th:text="${idMessage}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                아이디 오류
+                            </div>
+                            <div class="form-floating mb-2">
                                 <input type="text" class="form-control" id="floatingInput2" placeholder="name@example.com" th:field="*{adminName}">
                                 <label for="floatingInput2">이름</label>
                             </div>
-                            <div class="form-floating mb-3">
-
+                            <div th:if="${#fields.hasErrors('adminName')}" th:errors="*{adminName}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                이름 오류
+                            </div>
+                            <div class="form-floating mb-2">
                                 <input type="date" class="form-control" id="floatingInput3" placeholder="name@example.com" th:field="*{adminBirthday}">
                                 <label for="floatingInput3">생년월일</label>
                             </div>
-                            <div class="form-floating mb-3">
+                            <div th:if="${#fields.hasErrors('adminBirthday')}" th:errors="*{adminBirthday}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                패스워드 오류
+                            </div>
+                            <div class="form-floating mb-2">
                                 <input type="password" class="form-control" id="floatingPassword4" placeholder="Password" th:field="*{adminPassword}">
                                 <label for="floatingPassword4">비밀번호</label>
+                            </div>
+                            <div th:if="${#fields.hasErrors('adminPassword')}" th:errors="*{adminPassword}" class="text-start ms-2 text-danger mt-1" style="font-size:80%">
+                                패스워드 오류
                             </div>
                             <div class="form-floating">
                                 <input type="password" class="form-control" id="floatingPassword5" placeholder="Password" th:field="*{adminPasswordCheck}">
                                 <label for="floatingPassword5">비밀번호확인</label>
                             </div>
+                            <div th:if="${#fields.hasErrors('adminPasswordCheck')}" th:errors="*{adminPasswordCheck}" class="text-start ms-2 text-danger mt-1" style="font-size:80%">
+                                패스워드 확인 오류
+                            </div>
+                        </div>
+                        <div class="row mt-4 mt-3">
+                            <div class="col text-start fs-6">
+                                <a href="/admin/main-page" class="btn btn-outline-secondary">메인 페이지</a>
+                            </div>
+                            <div class="col text-end">
+                                <button type="submit" form="signup-form" class="btn btn-outline-primary">회원가입</button>
+                            </div>
                         </div>
                     </form>
-                </div>
-                <div class="row mt-4 mt-3">
-                    <div class="col text-start fs-6">
-                        <a href="/admin/main-page" class="btn btn-outline-secondary">메인 페이지</a>
-                    </div>
-                    <div class="col text-end">
-                        <button type="submit" form="signup-form" class="btn btn-outline-primary">회원가입</button>
-                    </div>
                 </div>
                 <hr>
                 <div class="row" style="opacity: 40%;">
