--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        .alert-login{
+            position : absolute;
+            top : 2.5%;
+            left : 40%;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid">
+    <div class="row alert-login" th:if="${message == '회원가입이 완료되었습니다. 다시 로그인 하세요.'}">
+        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+            <strong><i class="bi bi-exclamation-circle-fill"></i>&nbsp;회원가입 완료</strong> 관리자 승인까지 잠시만 기다려주세요.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
     <div class="row">
         <div class="col-4 offset-4 text-center mt-5 pt-5">
             <div class="card text-center p-5 border border-0 shadow-lg bg-body-tertiary rounded">
@@ -23,11 +37,11 @@
                                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{adminId}">
                                 <label for="floatingInput">아이디</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminId')}" th:errors="*{adminId}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                아이디 오류
+                            <div th:if="${#fields.hasErrors('adminId')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminId}">아이디 오류</span>
                             </div>
-                            <div th:if="idMessage" th:text="${idMessage}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                아이디 오류
+                            <div th:if="${idMessage == '아이디가 존재하지 않습니다.'}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:text="${idMessage}">아이디 오류</span>
                             </div>
                             <div class="form-floating mt-2 mb-1">
                                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{adminPassword}">
@@ -41,7 +55,7 @@
                 </div>
                 <div class="row mt-4 mt-3">
                     <div class="col text-start fs-6">
-                        <button type="button" class="btn btn-outline-secondary">메인 페이지</button>
+                        <a type="button" class="btn btn-outline-secondary" href="/admin/main-page">메인 페이지</a>
                     </div>
                     <div class="col text-end">
                         <a href="/admin/signup" class="btn btn-outline-warning">회원가입</a>
