--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
@@ -19,43 +20,43 @@
                 <div class="row mt-5">
                     <form id="signup-form" th:object="${adminDto}" th:action="@{/admin/signup}" method="post">
                         <div class="col">
-                            <div class="form-floating mb-2">
+                            <div class="form-floating mb-1">
                                 <input type="text" class="form-control" id="floatingInput1" placeholder="name@example.com" th:field="*{adminId}">
                                 <label for="floatingInput1">아이디</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminId')}" th:errors="*{adminId}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                아이디 오류
+                            <div th:if="${#fields.hasErrors('adminId')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminId}">아이디 오류</span>
                             </div>
-                            <div th:if="idMessage" th:text="${idMessage}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                아이디 오류
+                            <div th:if="${idMessage == '이미 존재하는 아이디입니다.'}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:text="${idMessage}">아이디 오류</span>
                             </div>
-                            <div class="form-floating mb-2">
+                            <div class="form-floating mb-1">
                                 <input type="text" class="form-control" id="floatingInput2" placeholder="name@example.com" th:field="*{adminName}">
                                 <label for="floatingInput2">이름</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminName')}" th:errors="*{adminName}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                이름 오류
+                            <div th:if="${#fields.hasErrors('adminName')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminName}">이름 오류</span>
                             </div>
-                            <div class="form-floating mb-2">
+                            <div class="form-floating mb-1">
                                 <input type="date" class="form-control" id="floatingInput3" placeholder="name@example.com" th:field="*{adminBirthday}">
                                 <label for="floatingInput3">생년월일</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminBirthday')}" th:errors="*{adminBirthday}" class="text-start ms-2 text-danger" style="font-size:80%">
-                                패스워드 오류
+                            <div th:if="${#fields.hasErrors('adminBirthday')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminBirthday}">생년월일 오류</span>
                             </div>
-                            <div class="form-floating mb-2">
+                            <div class="form-floating mb-1">
                                 <input type="password" class="form-control" id="floatingPassword4" placeholder="Password" th:field="*{adminPassword}">
                                 <label for="floatingPassword4">비밀번호</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminPassword')}" th:errors="*{adminPassword}" class="text-start ms-2 text-danger mt-1" style="font-size:80%">
-                                패스워드 오류
+                            <div th:if="${#fields.hasErrors('adminPassword')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminPassword}">생년월일 오류</span>
                             </div>
                             <div class="form-floating">
                                 <input type="password" class="form-control" id="floatingPassword5" placeholder="Password" th:field="*{adminPasswordCheck}">
                                 <label for="floatingPassword5">비밀번호확인</label>
                             </div>
-                            <div th:if="${#fields.hasErrors('adminPasswordCheck')}" th:errors="*{adminPasswordCheck}" class="text-start ms-2 text-danger mt-1" style="font-size:80%">
-                                패스워드 확인 오류
+                            <div th:if="${#fields.hasErrors('adminPasswordCheck')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{adminPasswordCheck}">생년월일 오류</span>
                             </div>
                         </div>
                         <div class="row mt-4 mt-3">
