--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -87,10 +87,10 @@
                                 </div>
                                 <br><br>
                                 <div class="row mt-5 pt-5">
-                                    <h4 class="col text-start">
+                                    <h4 class="col text-start" style="color:rgb(111,120,133)">
                                         교내 다양한 정보를<br>
                                         대시보드를 통해<br>
-                                        한눈에 확인합니다.<br>
+                                        한눈에 확인합니다<br>
                                     </h4>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                 <div class="row mt-5">
                     <div class="col">
                         <h1 class="text-center">나만의 AI 소요시간</h1>
-                        <h5 class="mt-3">개인별 이동시간 및 다양한 데이터를 활용한<br> 교내 이동시간 예측</h5>
+                        <h5 class="mt-3" style="color:rgb(111,120,133)">개인별 이동시간 및 다양한 데이터를 활용한<br> 교내 이동시간 예측</h5>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,8 @@
                         <br>
                         <br>
                         <br>
-                        <h5 class="text-end ms-4">내 손에 가천대학교</h5>
+                        <h5 class="text-end ms-4" style="color:rgb(111,120,133)">내 손에 가천대학교</h5>
+                        <h5 class="text-end ms-4" style="color:rgb(111,120,133)">AR 기술과 함께 즐겨보세요</h5>
                     </div>
                 </div>
                 <div class="row mt-5 mb-4">
