파일 경로 및 뷰 수정

--- a/src/main/resources/templates/node-detail.html
+++ b/src/main/resources/templates/node-detail.html
@@ -27,70 +27,70 @@
         <div class="bg-white p-2">
             <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="Assets/Gach가자_홈페이지용.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
                     </span>
             </p>
             <ul class="nav flex-column mt-4">
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
+                        <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/arrow.triangle.branch.png" class="img-fluid mb-2">
+                        <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
                         <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                        <img src="Assets/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
+                        <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
                     </a>
                     <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                         <li class="nav-item mt-1 nav-link">
-                            <img src="Assets/dot.viewfinder.png" class="img-fluid mb-1">
+                            <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
                             <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                         </li>
                         <li class="nav-item mt-1 nav-link">
-                            <img src="Assets/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
+                            <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
                             <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                         </li>
                         <li class="nav-item mt-1 nav-link">
-                            <img src="Assets/map.png" class="img-fluid mb-1">
+                            <img src="/image/map.png" class="img-fluid mb-1">
                             <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/brain.head.profile.png" class="img-fluid mb-2 me-4">
+                        <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
                         <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
+                        <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
+                        <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary ps-2">
-                        <img src="Assets/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                        <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
+                        <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary">
-                        <img src="Assets/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
+                        <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a href="#" class="nav-link text-body-secondary ps-2">
-                        <img src="Assets/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
+                        <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                     </a>
                 </li>
             </ul>
@@ -137,14 +137,14 @@
                                     </div>
                                     <div class="row mt-4">
                                         <div class="input-group mb-3">
-                                            <span class="input-group-text" id="basic-addon1">&nbsp;위도&nbsp;</span>
-                                            <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                            <span class="input-group-text" id="basic-addon2">&nbsp;위도&nbsp;</span>
+                                            <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon2">
                                         </div>
                                     </div>
                                     <div class="row mt-4">
                                         <div class="input-group mb-5 pb-5">
-                                            <span class="input-group-text" id="basic-addon1">&nbsp;고도&nbsp;</span>
-                                            <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                            <span class="input-group-text" id="basic-addon3">&nbsp;고도&nbsp;</span>
+                                            <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon3">
                                         </div>
                                     </div>
                                     <div class="row mt-5 pt-5 ps-1">
