--- a/src/main/resources/templates/admin-manage.html
+++ b/src/main/resources/templates/admin-manage.html
@@ -88,75 +88,74 @@
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <!-- Sidebar -->
         <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="Assets/Gach가자_홈페이지용.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
                     </span>
                 </p>
                 <ul class="nav flex-column mt-4">
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
+                            <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/arrow.triangle.branch.png" class="img-fluid mb-2">
+                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
                             <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="Assets/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
+                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
                         </a>
                         <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/dot.viewfinder.png" class="img-fluid mb-1">
+                                <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
+                                <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/map.png" class="img-fluid mb-1">
+                                <img src="/image/map.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/brain.head.profile.png" class="img-fluid mb-2 me-4">
+                            <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
                             <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
+                            <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
+                            <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
+                            <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
+                            <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
+                            <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                         </a>
                     </li>
                 </ul>
@@ -188,12 +187,9 @@
                                     <div class="col-2">
                                         관리자 목록
                                     </div>
-                                    <div class="col-3 ms-5 ps-5 text-end">
-                                        <button type="button" class="btn btn-outline-warning btn-sm fs-5">승인 대기 관리자</button>
-                                    </div>
                                 </div>
                                 <hr>
-                                <div class="row ms-2 me-2" style="overflow: scroll; max-height: 70vh">
+                                <div class="row ms-2 me-2" style="overflow: scroll; max-height: 30vh">
                                     <table class="table" style="overflow: auto; white-space: nowrap; border-collapse: collapse;">
                                         <thead>
                                         <tr>
@@ -202,7 +198,7 @@
                                             <th scope="col">권한</th>
                                             <th scope="col">이름</th>
                                             <th scope="col">생년월일</th>
-                                            <th scope="col">수정</th>
+                                            <th scope="col">설정</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -213,6 +209,140 @@
                                             <td th:text="${node.getPointY()}">@mdo</td>
                                             <td th:text="${node.getPointY()}">@mdo</td>
                                             <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col ms-2">
+                                        <h3>승인 대기자 목록</h3>
+                                    </div>
+                                </div>
+                                <div class="row ms-2 me-2 mt-3" style="overflow: scroll; max-height: 30vh">
+                                    <hr>
+                                    <table class="table" style="overflow: auto; white-space: nowrap; border-collapse: collapse;">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">번호</th>
+                                            <th scope="col">아이디</th>
+                                            <th scope="col">이름</th>
+                                            <th scope="col">생년월일</th>
+                                            <th scope="col">권한</th>
+                                            <th scope="col">승인</th>
+                                            <th scope="col">삭제</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}"><i class="bi bi-check-square"></i></td>
+                                            <td><i class="bi bi-x-square"></i></td>
                                         </tr>
                                         </tbody>
                                     </table>
