--- a/src/main/resources/templates/dashboard-guest.html
+++ b/src/main/resources/templates/dashboard-guest.html
@@ -82,16 +82,6 @@
             font-weight: 500;
             font-style: normal;
         }
-        .btn-toggle {
-            padding: .25rem .5rem;
-            font-weight: 600;
-            color: var(--bs-emphasis-color);
-            background-color: transparent;
-        }
-        .btn-toggle:hover, .btn-toggle:focus {
-            color: rgba(var(--bs-emphasis-color-rgb), .85);
-            background-color: var(--bs-tertiary-bg);
-        }
         .btn-toggle::before {
             width: 1.25em;
             line-height: 0;
@@ -102,9 +92,6 @@
         [data-bs-theme="dark"] .btn-toggle::before {
             content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28255,255,255,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
         }
-        .btn-toggle[aria-expanded="true"] {
-            color: rgba(var(--bs-emphasis-color-rgb), .85);
-        }
         .btn-toggle[aria-expanded="true"]::before {
             transform: rotate(90deg);
         }
@@ -112,9 +99,6 @@
             padding: .1875rem .5rem;
             margin-top: .125rem;
             margin-left: 1.25rem;
-        }
-        .btn-toggle-nav a:hover, .btn-toggle-nav a:focus {
-            background-color: var(--bs-tertiary-bg);
         }
         .scrollarea {
             overflow-y: auto;
@@ -139,70 +123,70 @@
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="Assets/Gach가자_홈페이지용.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
                     </span>
                 </p>
                 <ul class="nav flex-column mt-4">
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
+                            <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/arrow.triangle.branch.png" class="img-fluid mb-2">
+                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
                             <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="Assets/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
+                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
                         </a>
                         <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/dot.viewfinder.png" class="img-fluid mb-1">
+                                <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
+                                <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/map.png" class="img-fluid mb-1">
+                                <img src="/image/map.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/brain.head.profile.png" class="img-fluid mb-2 me-4">
+                            <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
                             <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
+                            <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
+                            <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
+                            <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
+                            <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
+                            <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                         </a>
                     </li>
                 </ul>
